--- a/style.css
+++ b/style.css
@@ -1,8 +1,37 @@
 /* Imports the Poppins font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+ :root { /* Raiz */
+    --main-color: #00eeff; /* Cor principal */
+    --text-color: #ffffff;
+    --bg-color-01: #1f242d;
+    --bg-color-02: #323946;
+    --color-00: #000000a1; /* Canal alfa - Transparencia */
+
+    /* Extra */
+    --color-01: #999999;
+    --color-02: #009539;
+    --color-03: #7950f2;
+    --color-04: #c00000;
+    --color-05: #232323;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* modelo de caixa, não empurra o conteudo pros lados */
+    text-decoration: none; /* retira todos os subilnhados e cores do links */
+    border: none; /* Tirar as bordas */
+    outline: none; /* Clica na imagem e fica uma borda, isso tira */
+    scroll-behavior: smooth; /* Quando clica rola suavemente */
+}
+
 html {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-    
+}
+
+body {
+    background-color: var(--bg-color-01);
+    color: var(--text-color);
 }
