--- a/style.css
+++ b/style.css
@@ -257,6 +257,71 @@ span {
     color: var(--bg-color-02);
 }
 
+form {
+    max-width: 45rem;
+    margin: 0.6rem auto;
+    text-align: center;
+    margin-bottom: 2rem; /*margem de baixo */
+
+}
+
+form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+form .input-box input,
+form textarea {
+    width: 100%; /* oculpar 100% do espaço */
+    padding: 1rem; /* afastar o conteúdo interno */ 
+    font-size: 1rem;
+    color: var(--text-color);
+    background-color: var(--bg-color-02);
+    border-radius: 0.5rem;
+    margin: 0.4rem 0;
+
+}
+
+form textarea {
+    resize: none;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem;
+    background-color: var(--bg-color-01);
+}
+
+.social-media img {
+    width: 3.5rem;
+}
+
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background: transparent;
+    border: solid 0.15rem var(--main-color);
+    border-radius: 50%; /* icones ficam redondos */
+    font-size: 2rem;
+    color: var(--main-color);
+    margin: 1.8rem 0.5rem /* afasta os elementos */
+    transition: 0.5s ease;
+}
+
+.social-media a:hover {
+    background-color: var(--main-color);
+    color: var(--bg-color-02);
+    box-shadow: 0 0 0.3rem var(--main-color); /* sombra */
+}
+
 /* button */
 .btn {
     display: inline-block;
@@ -277,3 +342,33 @@ span {
     cursor: pointer; /* Transforma o ponteiro na mãozinha */
 }
 /* button */
+
+/* tecla: alt + setas movimenta */
+
+/**** menu hamburguer ****/
+.menu-hamburguer {
+    display: none; /* não vai aparece */
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 2rem;
+    height: 0.3rem;
+    background-color: var(--text-color);
+    margin: 0.4rem 0;
+    transition: 0.3s ease;
+}
+
+.change .bar1 {
+    transform: translate(0, 065rem) rotate(-45deg); /* movimento de um lugar pro outro */
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+.change .bar3 {
+    transform: translate(0, -065rem) rotate(45deg); /* movimento de um lugar pro outro */
+}
+/**** menu hamburguer ****/
+
